--- a/public/landingpage/css/templatemo-style.css
+++ b/public/landingpage/css/templatemo-style.css
@@ -272,7 +272,7 @@ section {
 
 .custom-navbar {
     background: #ffffff;
-    border-top: 5px solid #3f51b5;
+    border-top: 5px solid #337AB7;
     border-bottom: 0;
     -webkit-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
